--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
 		"typescript-eslint": "^8.47.0",
 		"vite": "^7.2.2",
 		"vite-plugin-devtools-json": "^1.0.0"
+	},
+	"dependencies": {
+		"rambda": "^10.3.4",
+		"valibot": "^1.2.0"
 	}
 }
